bk_ida/gccida/g1/ix86_expand_prologue
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_prologue/src/i386.c:4699:21: error: use of undeclared identifier 'machine_mode'
v8 = gen_rtx_REG( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), i); 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_prologue/src/i386.c:4729:30: error: use of undeclared identifier 'stru_665A39'
fancy_abort( ( const char *)&stru_665A39, 4235, "ix86_expand_prologue"); 
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_prologue/src/i386.c:4733:36: error: use of undeclared identifier 'machine_mode'
v17 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), "_alloca"); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_prologue/src/i386.c:4737:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = (  struct rtx_def *)v20[4]; 
                          ^~~~~~
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ix86_expand_prologue/src/obj/i386.o] Error 1
